--- a/face-snaps/src/app/face-snap/face-snap.component.html
+++ b/face-snaps/src/app/face-snap/face-snap.component.html
@@ -1,7 +1,7 @@
 <div class="face-snap-card">
-    <h2>{{ title }}</h2>
-    <p>Mis en ligne le {{ createdDate }}</p>
-    <img [src]="imageUrl" [alt]="title">
-    <p>{{ description }}</p>
-    <p> <button (click)="onSnap()">{{ buttonText }}</button>🤌 {{ snaps }}</p>
+    <h2>{{ faceSnap.title }}</h2>
+    <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+    <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
+    <p>{{ faceSnap.description }}</p>
+    <p> <button (click)="onSnap()">{{ buttonText }}</button>🤌 {{ faceSnap.snaps }}</p>
   </div>
