--- a/face-snaps/src/app/face-snap/face-snap.component.scss
+++ b/face-snaps/src/app/face-snap/face-snap.component.scss
@@ -4,3 +4,23 @@
       width: 100%;
     }
   }
+
+.face-snap-card {
+  border: 1px gray solid;
+  border-radius: 5px;
+  margin: 10px;
+  box-shadow: 2px 2px 2px 2px rgba(220, 220, 220, 0.61);
+  text-align: center;
+}
+
+.snapped {
+  background-color: rgba(lightgreen, 0.4);
+  color: darkgreen;
+  button {
+    box-shadow: lightgreen 3px 3px 7px;
+    color: darkgreen;
+    &:active {
+      box-shadow: lightgreen 0 0 5px;
+    }
+  }
+}
