--- a/face-snaps/src/app/app.component.html
+++ b/face-snaps/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-face-snap *ngFor="let faceSnap of faceSnap"
- [faceSnap]="faceSnap"></app-face-snap>
+<app-header></app-header>
+<app-face-snaps-list></app-face-snaps-list>
+
 
 
 <!-- <app-face-snap *ngFor="let faceSnapElementOfArray of faceSnap"
