--- a/face-snaps/src/styles.scss
+++ b/face-snaps/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: Roboto, Helvetica, sans-serif;
+  }
+
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
