On a vue les routing

--- a/face-snaps/src/app/app.component.html
+++ b/face-snaps/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-<app-face-snaps-list></app-face-snaps-list>
+<router-outlet></router-outlet> 
+<!-- Ici c'est la route- racine, 
+    dans le local host faire /faceSnap pour accèder au face -->
 
 
 
