Deux technique de voyages entre les elements

--- a/face-snaps/src/app/header/header.component.html
+++ b/face-snaps/src/app/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
     <h1>Snap-Face</h1>
+    <nav>
+        <!-- C'est comme en dessous que je navigue entre les sites 1er méthode -->
+        <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+        <a routerLink="facesnaps">FaceSnap</a>
+    </nav>
 </header>
