--- a/face-snaps/src/app/landing-page/landing-page.component.html
+++ b/face-snaps/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="landing-block">
     <img src="assets/logo-face-snap.png" alt="Snapface logo">
     <div class="landing-links">
-      <a>Continuer vers Snapface</a>
+      <button (click)="toFaceSnap()">Continuez vers Face-Snap</button>
     </div>
   </div>
